# R-Type

./: .gitignore  README.md  SUMMARY.md  credits.md  rfc-protocol.txt
.github/workflows/: build-and-test-client.yml  build-and-test-server.yml  epitech-mirroring.yml  merging-permissions.yml
client/: CMakeLists.txt  Doxyfile
common/include/Engine/: ComponentPool.hpp  Entity.hpp
common/include/Miscellaneous/: Variables.hpp
common/include/Subsystems/HMI/: HumanMachineInterface.hpp  Input.hpp  InputMapper.hpp
common/include/Subsystems/Render/: Image.hpp  InputAdapter.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Window.hpp
common/src/Engine/: Entity.cpp
docs/: contributing.md
lib/HMI/V1/: CMakeLists.txt
lib/HMI/V1/src/: HumanMachineInterface.cpp  Input.cpp  InputMapper.cpp
lib/Render/SFML/: CMakeLists.txt
lib/Render/SFML/include/: SFMLAdapter.hpp
lib/Render/SFML/src/: Image.cpp  SFMLAdapter.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Window.cpp
scripts/: build-lib.sh  build.sh  check-merging-permissions.sh
server/: CMakeLists.txt
server/include/: Transciever.hpp  Variables.hpp
server/include/Exception/: EmptyQueueError.hpp  Generic.hpp
server/include/Misc/: Singleton.hpp  Utils.hpp
server/include/Miscellaneous/: Singleton.hpp  Utils.hpp
server/include/Network/: Client.hpp  Message.hpp  Transceiver.hpp
server/include/Wrapper/: Asio.hpp
server/src/: Main.cpp  Transciever.cpp
server/src/Exception/: EmptyQueueError.cpp  Generic.cpp
server/src/Misc/: Utils.cpp
server/src/Miscellaneous/: Utils.cpp
server/src/Network/: Client.cpp  Message.cpp  Transceiver.cpp
server/src/Wrapper/: Asio.cpp
